--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="img">
             <img class="image-style" src="Image/bird.JPG" alt="Bird Image">
             <img class="image-style" src="Image/bird 1.jpg" alt="Bird Image">
-            <img class="image-style" src="Image/bird 2.jpg" alt="Bird Image">
+            <img class="image-style" src="Image/bird 2.JPG" alt="Bird Image">
         </div>
     </div>
     <div class="container">
